Fixed issues related to shift hours and current shift hours

--- a/src/pages/roster/modals/shift-modal/shift-modal.scss
+++ b/src/pages/roster/modals/shift-modal/shift-modal.scss
@@ -122,3 +122,6 @@ page-shift-modal {
         position: relative;
     }
 }
+.margin-break {
+    margin-top: 10px;
+}
